--- a/package.json
+++ b/package.json
@@ -9,12 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.26.1",
+    "classnames": "^2.3.1",
+    "dayjs": "^1.11.1",
+    "gray-matter": "^4.0.3",
     "invariant": "^2.2.4",
+    "js-yaml": "^4.1.0",
     "next": "12.1.4",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "react-markdown": "^8.0.3",
     "react-query": "^3.34.19",
-    "sass": "^1.50.0"
+    "remark-gfm": "^3.0.1",
+    "remark-toc": "^8.0.1",
+    "sass": "^1.50.0",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "eslint": "8.12.0",
